--- a/README.Rmd
+++ b/README.Rmd
@@ -28,13 +28,13 @@ tried to keep this page accessible to those who are new to R and/or GitHub.
   and minor labelling changes.
 
 *A fork* is simply a copy of another package’s code that someone adapts
-for their own needs. This fork is **not officially part of CMAverse**.
+for their own needs. This fork is **not officially part of CMAverse** and **I am not afiliated with the original package**.
 If you want the stable, fully supported version, use CMAverse itself.
 If you need these specific extras, feel free to use CMAversePlus.
 
 #### Why are these functions not part of CMAverse?
 
-CMAversePlus was created with specific teaching and project needs in mind. It works well for this purpose, 
+CMAversePlus was created with my own specific teaching and project needs in mind. It works well for this purpose, 
 but it has not yet been fully integrated with every feature of CMAverse. Achieving that would require additional work 
 and discussion with the original authors. I haven’t contacted them yet, although I may do so in future.
 
@@ -126,7 +126,7 @@ if (!requireNamespace("remotes", quietly = TRUE)) {
   install.packages("remotes")
 }
 
-# install CMAversePlus (replace with your fork if different)
+# install CMAversePlus
 remotes::install_github("martindanka/CMAversePlus")
 ```
 
@@ -134,6 +134,65 @@ If you prefer not to use GitHub installs, you can download the package
 archive (`.zip` / `.tar.gz`) from the repository and use
 **RStudio → Tools → Install Packages… → Install from: Package Archive
 File**.
+
+## Minimal example
+
+Tutorials on using the original CMAverse package are provided on the [official website](https://bs1125.github.io/CMAverse/). 
+Below is a minimal example where the CMAversePlus toggles are applied to a simulated dataset from the 
+original [CMAverse vignette](https://bs1125.github.io/CMAverse/articles/post_exposure_confounding.html). 
+
+When you install CMAversePlus, it is recommended that you always specify wheter you want functions 
+from CMAverse or CMAversePlus, e.g., use `CMAversePlus::cmest()` or `CMAverse::cmest()`rather than `cmest()`.
+
+```{r, message = FALSE, warning = FALSE}
+# Load CMAversePlus
+library(CMAversePlus)
+```
+
+
+```{r, warning= FALSE}
+# Simulate CMAverse example dataset
+set.seed(1)
+expit <- function(x) exp(x)/(1+exp(x))
+n <- 10000
+C1 <- rnorm(n, mean = 1, sd = 0.1)
+C2 <- rbinom(n, 1, 0.6)
+A <- rbinom(n, 1, expit(0.2 + 0.5*C1 + 0.1*C2))
+L <- rnorm(n, mean = 1 + A - C1 - 0.5*C2, sd = 0.5)
+M <- rbinom(n, 1, expit(1 + 2*A - L + 1.5*C1 + 0.8*C2))
+Y <- rbinom(n, 1, expit(-3 - 0.4*A - 1.2*M + 0.5*A*M - 0.5*L + 0.3*C1 - 0.6*C2))
+data <- data.frame(A, M, Y, C1, C2, L)
+```
+
+Now we can request interventional effects on the risk ratio scale. We will also request the conditional draw from the
+mediator distribution instead of the marginal default. 
+
+```{r}
+fit <- CMAversePlus::cmest(
+  data = data, 
+  model = "gformula", 
+  outcome = "Y", 
+  exposure = "A", 
+  mediator = "M", 
+  basec = c("C1", "C2"), 
+  postc = "L", 
+  EMint = TRUE, 
+  mreg = list("logistic"), 
+  yreg = "logistic", 
+  postcreg = list("linear"), 
+  astar = 0, 
+  a = 1, 
+  mval = list(1), 
+  estimation = "imputation", 
+  inference = "bootstrap", 
+  nboot = 2,
+  # CMAversePlus-only toggles:
+  binary_scale = "RR",
+  draw_conditional = TRUE 
+  )
+
+summary(fit)
+```
 
 ## Further CMAverse resources
 
